--- a/qa/saas-transfer-service.yaml
+++ b/qa/saas-transfer-service.yaml
@@ -22,8 +22,8 @@ spec:
       k8s.kuboard.cn/name: saas-transfer-service
   strategy:
     rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
+      maxSurge: 1
+      maxUnavailable: 1
     type: RollingUpdate
   template:
     metadata:
