--- a/qa/magnolia-public-frontend.yaml
+++ b/qa/magnolia-public-frontend.yaml
@@ -16,8 +16,8 @@ spec:
       k8s.kuboard.cn/name: magnolia-public-frontend
   strategy:
     rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
+      maxSurge: 2
+      maxUnavailable: 1
     type: RollingUpdate
   template:
     metadata:
