--- a/prd/magnolia-author-frontend.yaml
+++ b/prd/magnolia-author-frontend.yaml
@@ -17,8 +17,8 @@ spec:
       k8s.kuboard.cn/name: magnolia-author-frontend
   strategy:
     rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
+      maxSurge: 1
+      maxUnavailable: 1
     type: RollingUpdate
   template:
     metadata:
