--- a/dev/ingress.yaml
+++ b/dev/ingress.yaml
@@ -53,7 +53,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: nginx-mobile
+                name: magnolia-public-mobile-svc
                 port:
                   number: 80
           - path: /magnoliaPublic
