--- a/dev/magnolia-public-mobile.yaml
+++ b/dev/magnolia-public-mobile.yaml
@@ -119,7 +119,7 @@ server {
         rewrite ^(.+)$ /index.html break; # 重定向规则
      }
      error_page   500 502 503 504  /50x.html;
-     location = /50x.html {
+     location  /50x.html {
        root   /usr/share/nginx/html;
      }
     }
