--- a/qa/magnolia-public-frontend.yaml
+++ b/qa/magnolia-public-frontend.yaml
@@ -121,7 +121,7 @@ data:
                 try_files $uri $uri/ /index.html @rewrites;
           }
 
-          location ~* .(gif|jpg|jpeg|html|css|js|png|ttf|woff2|ico|svg|json)$ {
+          location ~* .(gif|jpg|jpeg|html|css|js|png|ttf|woff2|ico|svg|json|otf)$ {
             root   /usr/share/nginx/html/qa;
             index  index.html index.htm;
             expires -1;
