--- a/dev/magnolia-public-mobile.yaml
+++ b/dev/magnolia-public-mobile.yaml
@@ -102,7 +102,7 @@ data:
         server_name localhost;
 
 
-        location ~* .(gif|jpg|jpeg|html|css|js|png|ttf|woff2|ico|svg|json)$ {
+        location ~* .(gif|jpg|jpeg|html|css|js|png|ttf|woff2|ico|svg|json|otf)$ {
                 root   /usr/share/nginx/html;
                 index  index.html;
                expires -1;
