--- a/qa/magnolia-public-backend.yaml
+++ b/qa/magnolia-public-backend.yaml
@@ -63,10 +63,10 @@ spec:
             timeoutSeconds: 1
           resources:
             limits:
-              cpu: '12'
+              cpu: "12"
               memory: 24Gi
             requests:
-              cpu: '12'
+              cpu: "12"
               memory: 24Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
