--- a/qa/magnolia-public-frontend.yaml
+++ b/qa/magnolia-public-frontend.yaml
@@ -27,6 +27,23 @@ spec:
       labels:
         k8s.kuboard.cn/name: magnolia-public-frontend
     spec:
+        affinity:
+        podAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - podAffinityTerm:
+                labelSelector:
+                  matchLabels:
+                    k8s.kuboard.cn/name: saas-homework-service
+                topologyKey: kubernetes.io/hostname
+              weight: 100
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - podAffinityTerm:
+                labelSelector:
+                  matchLabels:
+                    k8s.kuboard.cn/name: magnolia-public-frontend
+                topologyKey: kubernetes.io/hostname
+              weight: 100
       containers:
         - image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-frontend"
           imagePullPolicy: Always
