--- a/qa/saas-homework-service.yaml
+++ b/qa/saas-homework-service.yaml
@@ -34,6 +34,23 @@ spec:
       labels:
         k8s.kuboard.cn/name: saas-homework-service
     spec:
+      affinity:
+        podAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - podAffinityTerm:
+                labelSelector:
+                  matchLabels:
+                    k8s.kuboard.cn/name: magnolia-public-backend
+                topologyKey: kubernetes.io/hostname
+              weight: 100
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - podAffinityTerm:
+                labelSelector:
+                  matchLabels:
+                    k8s.kuboard.cn/name: saas-homework-service
+                topologyKey: kubernetes.io/hostname
+              weight: 100
       containers:
         - command:
             - /bin/bash
