--- a/prd/saas-homework-service.yaml
+++ b/prd/saas-homework-service.yaml
@@ -6,6 +6,7 @@ metadata:
     k8s.kuboard.cn/workload: saas-homework-service
   labels:
     k8s.kuboard.cn/name: saas-homework-service
+    app: saas-homework-service
   name: saas-homework-service
   namespace: zb-schools
 spec:
@@ -15,10 +16,11 @@ spec:
   selector:
     matchLabels:
       k8s.kuboard.cn/name: saas-homework-service
+      app: saas-homework-service
   strategy:
     rollingUpdate:
       maxSurge: 2
-      maxUnavailable: 1
+      maxUnavailable: 2
     type: RollingUpdate
   template:
     metadata:
@@ -33,6 +35,7 @@ spec:
       creationTimestamp: null
       labels:
         k8s.kuboard.cn/name: saas-homework-service
+        app: saas-homework-service
     spec:
       affinity:
         podAffinity:
@@ -40,17 +43,15 @@ spec:
             - podAffinityTerm:
                 labelSelector:
                   matchLabels:
-                    k8s.kuboard.cn/name: magnolia-public-backend
+                    app: magnolia-public-frontend
                 topologyKey: kubernetes.io/hostname
               weight: 100
         podAntiAffinity:
-          preferredDuringSchedulingIgnoredDuringExecution:
-            - podAffinityTerm:
-                labelSelector:
-                  matchLabels:
-                    k8s.kuboard.cn/name: saas-homework-service
-                topologyKey: kubernetes.io/hostname
-              weight: 100
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchLabels:
+                  app: saas-homework-service
+              topologyKey: kubernetes.io/hostname
       containers:
         - command:
             - /bin/bash
