--- a/prd/magnolia-public-frontend.yaml
+++ b/prd/magnolia-public-frontend.yaml
@@ -6,7 +6,6 @@ metadata:
     k8s.kuboard.cn/workload: magnolia-public-frontend
   labels:
     k8s.kuboard.cn/name: magnolia-public-frontend
-    app: magnolia-public-frontend
   name: magnolia-public-frontend
   namespace: zb-schools
 spec:
@@ -16,7 +15,6 @@ spec:
   selector:
     matchLabels:
       k8s.kuboard.cn/name: magnolia-public-frontend
-      app: magnolia-public-frontend
   strategy:
     rollingUpdate:
       maxSurge: 2
@@ -29,7 +27,6 @@ spec:
       creationTimestamp: null
       labels:
         k8s.kuboard.cn/name: magnolia-public-frontend
-        app: magnolia-public-frontend
     spec:
       affinity:
         podAffinity:
@@ -37,14 +34,14 @@ spec:
             - podAffinityTerm:
                 labelSelector:
                   matchLabels:
-                    app: saas-homework-service
+                    k8s.kuboard.cn/nam: e saas-homework-service
                 topologyKey: kubernetes.io/hostname
               weight: 100
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
                 matchLabels:
-                  app: magnolia-public-frontend
+                  k8s.kuboard.cn/name: magnolia-public-frontend
               topologyKey: kubernetes.io/hostname
       containers:
         - image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-frontend"
