--- a/prd/magnolia-public-mobile.yaml
+++ b/prd/magnolia-public-mobile.yaml
@@ -6,13 +6,11 @@ metadata:
   namespace: zb-schools
   labels:
     k8s.kuboard.cn/name: nginx-mobile
-    app: nginx-mobile
 spec:
   replicas: 3
   selector:
     matchLabels:
       k8s.kuboard.cn/name: nginx-mobile
-      app: nginx-mobile
   strategy:
     rollingUpdate:
       maxSurge: 2
@@ -22,7 +20,6 @@ spec:
     metadata:
       labels:
         k8s.kuboard.cn/name: nginx-mobile
-        app: nginx-mobile
     spec:
       affinity:
         podAffinity:
@@ -30,7 +27,7 @@ spec:
             - podAffinityTerm:
                 labelSelector:
                   matchLabels:
-                    app: magnolia-public-backend
+                    k8s.kuboard.cn/name: magnolia-public-backend
                 topologyKey: kubernetes.io/hostname
               weight: 100
         podAntiAffinity:
@@ -38,7 +35,7 @@ spec:
           - podAffinityTerm:
                 labelSelector:
                   matchLabels:
-                    app: nginx-mobile
+                    k8s.kuboard.cn/name: nginx-mobile
                 topologyKey: kubernetes.io/hostname
             weight: 100
       containers:
