--- a/prd/magnolia-public-frontend.yaml
+++ b/prd/magnolia-public-frontend.yaml
@@ -120,7 +120,9 @@ data:
             listen       80;
             listen  [::]:80;
             server_name  localhost;
-            client_max_body_size 100M;
+            client_max_body_size 1000M;
+            access_log /mnt/access.log main;
+            error_log /mnt/error.log warn;
 
             location / {
                     root /usr/share/nginx/html;
