--- a/qa/magnolia-public-frontend.yaml
+++ b/qa/magnolia-public-frontend.yaml
@@ -9,19 +9,20 @@ metadata:
   name: magnolia-public-frontend
   namespace: zb-schools
 spec:
-  replicas: 3 
+  replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
       k8s.kuboard.cn/name: magnolia-public-frontend
   strategy:
     rollingUpdate:
-      maxSurge: 2
-      maxUnavailable: 1
+      maxSurge: 1
+      maxUnavailable: 0
     type: RollingUpdate
   template:
     metadata:
       annotations:
+        karpenter.sh/do-not-disrupt: "true"
         kubectl.kubernetes.io/restartedAt: "2024-06-26T13:53:43+08:00"
       creationTimestamp: null
       labels:
@@ -61,10 +62,10 @@ spec:
           resources:
             limits:
               cpu: "2"
-              memory: 3Gi
+              memory: 4Gi
             requests:
               cpu: "2"
-              memory: 3Gi
+              memory: 4Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
