--- a/dev/node-job.yaml
+++ b/dev/node-job.yaml
@@ -27,9 +27,9 @@ spec:
     spec:
       containers:
         - command:
-            - tail
-            - '-f'
-            - /dev/null
+            - sh
+            - '-c'
+            - /code/auto-job.sh
           image: '767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-frontend'
           imagePullPolicy: IfNotPresent
           name: nodejs
