--- a/dev/magnolia-public-frontend.yaml
+++ b/dev/magnolia-public-frontend.yaml
@@ -29,7 +29,10 @@ spec:
         k8s.kuboard.cn/name: magnolia-public-frontend
     spec:
       containers:
-        - image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-frontend"
+        - command:
+            - sh
+            - /code/scripts/auto-job.sh
+          image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-frontend"
           imagePullPolicy: Always
           name: nginx
           ports:
