--- a/dev/magnolia-public-frontend.yaml
+++ b/dev/magnolia-public-frontend.yaml
@@ -57,12 +57,9 @@ spec:
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
-            - mountPath: /etc/nginx/conf.d/default.conf
+            - mountPath: /etc/nginx/sites-enabled/default.conf
               name: volume-2hfc3
               subPath: default.conf
-            - mountPath: /etc/nginx/nginx.conf
-              name: volume-fxbsk
-              subPath: nginx.conf
       dnsPolicy: ClusterFirst
       imagePullSecrets:
         - name: aws-ecr
@@ -78,18 +75,10 @@ spec:
                 path: default.conf
             name: public-nginx-conf
           name: volume-2hfc3
-        - configMap:
-            defaultMode: 420
-            items:
-              - key: nginx.conf
-                path: nginx.conf
-            name: public-nginx-conf
-          name: volume-fxbsk
 ---
 apiVersion: v1
 data:
   default.conf: |-
-    gzip on;
     gzip_comp_level 5;
     gzip_min_length 3;
     gzip_proxied any;
@@ -127,8 +116,6 @@ data:
         listen  [::]:80;
         server_name  localhost;
         client_max_body_size 1000M;
-        access_log /mnt/access.log main;
-        error_log /mnt/error.log warn;
 
 
         location = / {
@@ -217,39 +204,6 @@ data:
         location = /50x.html {
             root /usr/share/nginx/html;
         }
-    }
-  nginx.conf: |-
-
-    user  nginx;
-    worker_processes  auto;
-
-    error_log  /var/log/nginx/error.log notice;
-    pid        /var/run/nginx.pid;
-
-
-    events {
-        worker_connections  1024;
-    }
-
-
-    http {
-        include       /etc/nginx/mime.types;
-        default_type  application/octet-stream;
-
-        log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                          '$status $body_bytes_sent "$http_referer" '
-                          '"$http_user_agent" "$http_x_forwarded_for"';
-
-        access_log  /var/log/nginx/access.log  main;
-
-        sendfile        on;
-        #tcp_nopush     on;
-
-        keepalive_timeout  65;
-
-        #gzip  on;
-
-        include /etc/nginx/conf.d/*.conf;
     }
 kind: ConfigMap
 metadata:
