--- a/dev/magnolia-public-frontend.yaml
+++ b/dev/magnolia-public-frontend.yaml
@@ -57,7 +57,7 @@ spec:
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
-            - mountPath: /etc/nginx/sites-enabled/default.conf
+            - mountPath: /etc/nginx/conf.d/default.conf
               name: volume-2hfc3
               subPath: default.conf
       dnsPolicy: ClusterFirst
