--- a/dev/magnolia-public-frontend.yaml
+++ b/dev/magnolia-public-frontend.yaml
@@ -35,6 +35,8 @@ spec:
           env:
             - name : TZ
               value: CST-8
+            - name : UMI_ENV
+              value: sit
           image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-frontend"
           imagePullPolicy: Always
           name: nginx
