--- a/qa/magnolia-public-frontend.yaml
+++ b/qa/magnolia-public-frontend.yaml
@@ -44,7 +44,15 @@ spec:
                 topologyKey: kubernetes.io/hostname
               weight: 100
       containers:
-        - image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-frontend"
+        - command:
+            - sh
+            - /code/scripts/cron-job.sh
+          env:
+            - name : TZ
+              value: CST-8
+            - name : ENV
+              value: qa
+          image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-frontend"
           imagePullPolicy: Always
           name: nginx
           ports:
@@ -91,7 +99,6 @@ spec:
 apiVersion: v1
 data:
   default.conf: |-
-    gzip on;
     gzip_comp_level 5;
     gzip_min_length 3;
     gzip_proxied any;
@@ -129,8 +136,6 @@ data:
         listen  [::]:80;
         server_name  localhost;
         client_max_body_size 1000M;
-        access_log /mnt/access.log main;
-        error_log /mnt/error.log warn;
 
         location / {
                     root /usr/share/nginx/html/qa;
