--- a/prd/magnolia-public-backend.yaml
+++ b/prd/magnolia-public-backend.yaml
@@ -50,15 +50,35 @@ spec:
             - containerPort: 8080
               name: port8080
               protocol: TCP
-          readinessProbe:
-            failureThreshold: 30
+          startupProbe:
+            failureThreshold: 100000
             httpGet:
               path: >-
                 /magnoliaPublic/.resources/defaultMagnoliaLoginForm/img/logo-magnolia.gif
               port: 8080
               scheme: HTTP
-            initialDelaySeconds: 120
+            initialDelaySeconds: 120   
             periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 2	
+          readinessProbe:
+            failureThreshold: 2
+            httpGet:
+              path: >-
+                /magnoliaPublic/.resources/defaultMagnoliaLoginForm/img/logo-magnolia.gif
+              port: 8080
+              scheme: HTTP
+            periodSeconds: 5
+            successThreshold: 1
+            timeoutSeconds: 2
+          livenessProbe:
+            failureThreshold: 6
+             httpGet:
+              path: >-
+                /magnoliaPublic/.resources/defaultMagnoliaLoginForm/img/logo-magnolia.gif
+              port: 8080
+              scheme: HTTP
+            periodSeconds: 30
             successThreshold: 1
             timeoutSeconds: 1
           resources:
