--- a/dev/magnolia-public-frontend.yaml
+++ b/dev/magnolia-public-frontend.yaml
@@ -57,8 +57,8 @@ spec:
               cpu: "1"
               memory: 4Gi
             requests:
-              cpu: "1"
-              memory: 4Gi
+              cpu: "1000m"
+              memory: 900Mi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
