--- a/qa/magnolia-public-frontend.yaml
+++ b/qa/magnolia-public-frontend.yaml
@@ -26,7 +26,7 @@ spec:
         kubectl.kubernetes.io/restartedAt: "2024-06-26T13:53:43+08:00"
       creationTimestamp: null
       labels:
-        k8s.kuboard.cn/name: magnolia-public-frontend
+        k8s.kuboard.cn/name: saas-transfer-service
     spec:
       affinity:
         podAffinity:
@@ -69,10 +69,10 @@ spec:
             timeoutSeconds: 2
           resources:
             limits:
-              cpu: "1"
+              cpu: "2"
               memory: 4Gi
             requests:
-              cpu: "1"
+              cpu: "2"
               memory: 4Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
